--- a/index.html
+++ b/index.html
@@ -4,74 +4,83 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Akademnashr</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- site header -->
-  <header>
+  <header class="site-header">
     <a href="index.html">
       <img src="img/logo.svg" alt="python-book" width="227" height="59.18">
     </a>
     <nav>
       <ul>
-        <li><a href="#">Bosh sahifa</a></li>
-        <li><a href="#">Kitoblar</a></li>
-        <li><a href="#">Aksiyalar</a></li>
-        <li><a href="#">Kontaktlar</a></li>
+        <li><a class="sitenav-link" href="#">Bosh sahifa</a></li>
+        <li><a class="sitenav-link" href="#">Kitoblar</a></li>
+        <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
+        <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
       </ul>
     </nav>
-    <a href="#">Ro`yxatdan o`tish</a>
+    <a class="main-link" href="#">Ro`yxatdan o`tish</a>
   </header>
 
   <main>
     <!-- HERO -->
     <section>
-      <div>
-        <hr>
+      <div class="hero">
         <h2>Pythonda dasturlash asoslari</h2>
-        <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br>mukammal qo‘llanma. Kitobning har bir bo‘limi <br>
-          uchun maxsus video darslar yozilgan bo‘lib, ularga <br>kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-          <a href="#">Buyurtma berish</a>
+        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br>mukammal qo‘llanma. Kitobning har bir bo‘limi <br>
+          uchun maxsus video darslar yozilgan bo‘lib, ularga <br>kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.
+          <br>
+          <hr class="hero-line">
+          <a class="main-link" href="#">Buyurtma berish</a></p>
+          <img class="hero-img" src="img/python-book.svg" alt="book" width="510" height="510">
         </div>
       </section>
-      <img src="img/python-book.svg" alt="book" width="510" height="510">
       <section>
         <!-- FEATURES -->
-        <hr>
-        <h2>Nega aynan Akademnashr?</h2>
+        <hr class="hero-line">
+        <h2 class="feature-heading1">Nega aynan Akademnashr?</h2>
         <ul>
-          <li>
-            <img src="img/feature-icon.svg" alt="feature" width="100" height="100">
-            <h3>Eng sara kitoblar</h3>
-            <p>Trenddagi eng ommabop, turli <br> auditoriyalarga mo’ljallangan har xil <br>janrdagi kitoblarni topa olasiz.</p>
-          </li>
-          <li>
-            <img src="img/feature-icon-1.svg" alt="feature" width="100" height="100">
-            <h3>Oson buyurtma qilish</h3>
-            <p>Akademnashr.uz saytidan o’zingizga <br>yoqqan kitobni sodda usulda buyurtma <br>qila olasiz.</p>
-          </li>
-          <li>
-            <img src="img/feature-icon-2.svg" alt="feature" width="100" height="100">
-            <h3>Tez yetkazib berish</h3>
-            <p>O’zbekistonning ixtiyoriy hududiga 3 ish <br>kuni ichida, xalqaro buyurtmalarni 10 ish <br>kuni ichida yetkazib beriladi.</p>
-          </li>
+          <div class="feature">
+            <li>
+              <img class="features-icon" src="img/feature-icon.svg" alt="feature" width="100" height="100">
+              <h3 class="feature-heading">Eng sara kitoblar</h3>
+              <p class="feature-info">Trenddagi eng ommabop, turli <br> auditoriyalarga mo’ljallangan har xil <br>janrdagi kitoblarni topa olasiz.</p>
+            </li>
+          </div>
+          <div class="feature">
+            <li>
+              <img src="img/feature-icon-1.svg" alt="feature" width="100" height="100">
+              <h3 class="feature-heading">Oson buyurtma qilish</h3>
+              <p class="feature-info">Akademnashr.uz saytidan o’zingizga <br>yoqqan kitobni sodda usulda buyurtma <br>qila olasiz.</p>
+            </li>
+          </div>
+          <div class="feature">
+            <li>
+              <img src="img/feature-icon-2.svg" alt="feature" width="100" height="100">
+              <h3 class="feature-heading">Tez yetkazib berish</h3>
+              <p class="feature-info">O’zbekistonning ixtiyoriy hududiga 3 ish <br>kuni ichida, xalqaro buyurtmalarni 10 ish <br>kuni ichida yetkazib beriladi.</p>
+            </li>
+          </div>
         </ul>
       </section>
 
       <!-- AKSIYA -->
-      <section>
-        <div>
-          <img src="img/python-book.svg" alt="kitob" width="440" height="440">
-          <h2>Bolalar kitoblari uchun
+      <section class="promo">
+        <div class="promo-content">
+
+          <h2 class="promo-heading">Bolalar kitoblari uchun
             ajoyib aksiya!</h2>
-            <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-            <p>Aksiyadagi eng katta to’plamda 50 ta kitobni 350 ming so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
-            <a href="#">Buyurtma berish</a>
+            <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+            <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta kitob</strong>ni <strong class="promo-highlight">350 ming so’m</strong>ga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+            <a class="main-link" href="#">Buyurtma berish</a>
+            <img class="promo-img" src="img/sale-img.jpg" alt="kitob" width="440" height="440">
           </div>
         </section>
 
       </main>
       <!-- SITE FOOTER -->
-      <footer>
+      <footer class="site-footer" >
         <a href="index.html"></a>
         <img src="img/logo.svg" alt="logo" width="227.71" height="60">
         <!-- IJTIMOIY TARMOQLAR -->
@@ -81,18 +90,18 @@
           <li><a href="https://instagram.com/akademnashr/?hl=en" target="_blank"><img src="img/icon-instagram.svg" alt="instagram" width="24" height="24"></a></li>
         </ul>
       </footer>
-      <hr>
+      <hr class="site-footer-divider" >
 
       <!-- LINKLAR -->
       <footer>
-        <ul>
+        <ul class="site-footer-links" >
           <li><a href="#">Bosh sahifa</a></li>
           <li><a href="#">Kitoblar</a></li>
           <li><a href="#">Aksiya</a></li>
           <li><a href="#">Yangiliklar</a></li>
           <li><a href="#">Kontaktlar</a></li>
         </ul>
-        <ul>
+        <ul class="site-footer-links" >
           <li><a href="#">Ilmiy nashrlar</a></li>
           <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
           <li><a href="#">Ma’rifiy nashrlar</a></li>
@@ -101,7 +110,7 @@
           <li><a href="#">Abituriyentlar uchun</a></li>
           <li><a href="#">Bolalar uchun</a></li>
         </ul>
-        <ul>
+        <ul class="site-footer-links" >
           <li><a href="#">Ko’p so’raladigan savollar</a></li>
           <li><a href="#">Yetkazib berish haqida</a></li>
           <li><a href="#">To’lov usullari haqida</a></li>
