Add colors, texts and link styles

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <hr class="site-footer-divider" >
 
       <!-- LINKLAR -->
-      <footer>
+      <footer class="site-footer" >
         <ul class="site-footer-links" >
           <li><a href="#">Bosh sahifa</a></li>
           <li><a href="#">Kitoblar</a></li>
