Add justify-content and align-items styles

--- a/index.html
+++ b/index.html
@@ -15,35 +15,37 @@
     <a href="index.html">
       <img src="img/logo.svg" alt="python-book" width="227" height="59.18">
     </a>
-    <nav>
-      <ul>
-        <li><a class="sitenav-link" href="#">Bosh sahifa</a></li>
-        <li><a class="sitenav-link" href="#">Kitoblar</a></li>
-        <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
-        <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
-      </ul>
-    </nav>
-    <a class="main-link" href="#">Ro`yxatdan o`tish</a>
+    <div class="site-header-action">
+      <nav>
+        <ul class="sitenav-list">
+          <li><a class="sitenav-link" href="#">Bosh sahifa</a></li>
+          <li><a class="sitenav-link" href="#">Kitoblar</a></li>
+          <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
+          <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
+        </ul>
+      </nav>
+      <a class="main-link" href="#">Ro`yxatdan o`tish</a>
+    </div>
   </header>
 
   <main>
     <!-- HERO -->
-    <section>
-      <div class="hero">
+    <section class="hero">
+      <div class="hero-content">
         <h2 class="hero-heading" >Pythonda dasturlash asoslari</h2>
         <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br>mukammal qo‘llanma. Kitobning har bir bo‘limi <br>
           uchun maxsus video darslar yozilgan bo‘lib, ularga <br>kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.
           <br>
           <hr class="hero-line">
           <a class="main-link" href="#">Buyurtma berish</a></p>
-          <img class="hero-img" src="img/python-book.svg" alt="book" width="510" height="510">
         </div>
+        <img class="hero-img" src="img/python-book.svg" alt="book" width="510" height="510">
       </section>
       <section>
         <!-- FEATURES -->
         <hr class="hero-line">
         <h2 class="feature-heading1">Nega aynan Akademnashr?</h2>
-        <ul>
+        <ul class="features-list">
           <div class="feature">
             <li>
               <img class="features-icon" src="img/feature-icon.svg" alt="feature" width="100" height="100">
@@ -68,6 +70,8 @@
         </ul>
       </section>
 
+
+
       <!-- AKSIYA -->
       <section class="promo">
         <div class="promo-content">
@@ -77,47 +81,50 @@
             <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
             <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta kitob</strong>ni <strong class="promo-highlight">350 ming so’m</strong>ga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
             <a class="main-link" href="#">Buyurtma berish</a>
-            <img class="promo-img" src="img/sale-img.jpg" alt="kitob" width="440" height="440">
           </div>
+          <img class="promo-img" src="img/sale-img.jpg" alt="kitob" width="440" height="440">
         </section>
 
       </main>
       <!-- SITE FOOTER -->
       <footer class="site-footer" >
-        <a href="index.html"></a>
-        <img src="img/logo.svg" alt="logo" width="227.71" height="60">
-        <!-- IJTIMOIY TARMOQLAR -->
-        <ul>
-          <li><a href="https://t.me/Akademnashr" target="_blank"><img src="img/icon-telegram.svg" alt="telegram" width="24" height="24"></a></li>
-          <li><a href="https://www.facebook.com/Akademnashr" target="_blank"><img src="img/icon-facebook.svg" alt="facebook" width="24" height="24"></a></li>
-          <li><a href="https://instagram.com/akademnashr/?hl=en" target="_blank"><img src="img/icon-instagram.svg" alt="instagram" width="24" height="24"></a></li>
-        </ul>
+        <div class="site-footer-top">
+          <a href="index.html"><img src="img/logo.svg" alt="logo" width="227.71" height="60"></a>
+          <!-- IJTIMOIY TARMOQLAR -->
+          <ul class="site-footer-socials">
+            <li><a href="https://t.me/Akademnashr" target="_blank"><img src="img/icon-telegram.svg" alt="telegram" width="24" height="24"></a></li>
+            <li><a href="https://www.facebook.com/Akademnashr" target="_blank"><img src="img/icon-facebook.svg" alt="facebook" width="24" height="24"></a></li>
+            <li><a href="https://instagram.com/akademnashr/?hl=en" target="_blank"><img src="img/icon-instagram.svg" alt="instagram" width="24" height="24"></a></li>
+          </ul>
+        </div>
       </footer>
       <hr class="site-footer-divider" >
 
       <!-- LINKLAR -->
       <footer class="site-footer" >
-        <ul class="site-footer-links" >
-          <li><a href="#">Bosh sahifa</a></li>
-          <li><a href="#">Kitoblar</a></li>
-          <li><a href="#">Aksiya</a></li>
-          <li><a href="#">Yangiliklar</a></li>
-          <li><a href="#">Kontaktlar</a></li>
-        </ul>
-        <ul class="site-footer-links" >
-          <li><a href="#">Ilmiy nashrlar</a></li>
-          <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
-          <li><a href="#">Ma’rifiy nashrlar</a></li>
-          <li><a href="#">Lug’atlar</a></li>
-          <li><a href="#">Adabiy-badiiy nashrlar</a></li>
-          <li><a href="#">Abituriyentlar uchun</a></li>
-          <li><a href="#">Bolalar uchun</a></li>
-        </ul>
-        <ul class="site-footer-links" >
-          <li><a href="#">Ko’p so’raladigan savollar</a></li>
-          <li><a href="#">Yetkazib berish haqida</a></li>
-          <li><a href="#">To’lov usullari haqida</a></li>
-        </ul>
+        <div class="site-footer-bottom">
+          <ul class="site-footer-links" >
+            <li><a href="#">Bosh sahifa</a></li>
+            <li><a href="#">Kitoblar</a></li>
+            <li><a href="#">Aksiya</a></li>
+            <li><a href="#">Yangiliklar</a></li>
+            <li><a href="#">Kontaktlar</a></li>
+          </ul>
+          <ul class="site-footer-links" >
+            <li><a href="#">Ilmiy nashrlar</a></li>
+            <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
+            <li><a href="#">Ma’rifiy nashrlar</a></li>
+            <li><a href="#">Lug’atlar</a></li>
+            <li><a href="#">Adabiy-badiiy nashrlar</a></li>
+            <li><a href="#">Abituriyentlar uchun</a></li>
+            <li><a href="#">Bolalar uchun</a></li>
+          </ul>
+          <ul class="site-footer-links" >
+            <li><a href="#">Ko’p so’raladigan savollar</a></li>
+            <li><a href="#">Yetkazib berish haqida</a></li>
+            <li><a href="#">To’lov usullari haqida</a></li>
+          </ul>
+        </div>
       </footer>
     </body>
     </html>
