--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- site header -->
   <header class="site-header">
-    <a href="index.html">
+    <a class="logo-link" href="index.html">
       <img src="img/logo.svg" alt="python-book" width="227" height="59.18">
     </a>
     <div class="site-header-action">
@@ -89,7 +89,7 @@
       <!-- SITE FOOTER -->
       <footer class="site-footer" >
         <div class="site-footer-top">
-          <a href="index.html"><img src="img/logo.svg" alt="logo" width="227.71" height="60"></a>
+          <a class="logo-link" href="index.html"><img src="img/logo.svg" alt="logo" width="227.71" height="60"></a>
           <!-- IJTIMOIY TARMOQLAR -->
           <ul class="site-footer-socials">
             <li><a href="https://t.me/Akademnashr" target="_blank"><img src="img/icon-telegram.svg" alt="telegram" width="24" height="24"></a></li>
