Add border, padding, border-radius styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <img class="hero-img" src="img/python-book.svg" alt="book" width="510" height="510">
       </section>
-      <section>
+      <section class="features">
         <!-- FEATURES -->
         <hr class="hero-line">
         <h2 class="feature-heading1">Nega aynan Akademnashr?</h2>
