--- a/index.html
+++ b/index.html
@@ -13,121 +13,131 @@
 <body>
   <!-- site header -->
   <header class="site-header">
-    <a class="logo-link" href="index.html">
-      <img src="img/logo.svg" alt="python-book" width="227" height="59.18">
-    </a>
-    <div class="site-header-action">
-      <nav>
-        <ul class="sitenav-list">
-          <li class="sitenav-item" ><a class="sitenav-link" href="#">Bosh sahifa</a></li>
-          <li class="sitenav-item" ><a class="sitenav-link" href="#">Kitoblar</a></li>
-          <li class="sitenav-item" ><a class="sitenav-link" href="#">Aksiyalar</a></li>
-          <li class="sitenav-item" ><a class="sitenav-link" href="#">Kontaktlar</a></li>
-        </ul>
-      </nav>
-      <a class="main-link" href="#">Ro`yxatdan o`tish</a>
+    <div class="site-header-container container">
+      <a class="logo-link" href="index.html">
+        <img src="img/logo.svg" alt="python-book" width="227" height="59.18">
+      </a>
+      <div class="site-header-action">
+        <nav>
+          <ul class="sitenav-list">
+            <li class="sitenav-item" ><a class="sitenav-link" href="#">Bosh sahifa</a></li>
+            <li class="sitenav-item" ><a class="sitenav-link" href="#">Kitoblar</a></li>
+            <li class="sitenav-item" ><a class="sitenav-link" href="#">Aksiyalar</a></li>
+            <li class="sitenav-item" ><a class="sitenav-link" href="#">Kontaktlar</a></li>
+          </ul>
+        </nav>
+        <a class="main-link" href="#">Ro`yxatdan o`tish</a>
+      </div>
     </div>
   </header>
 
   <main>
     <!-- HERO -->
     <section class="hero">
-      <div class="hero-content">
-        <h2 class="hero-heading" >Pythonda dasturlash asoslari</h2>
-        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br>mukammal qo‘llanma. Kitobning har bir bo‘limi <br>
-          uchun maxsus video darslar yozilgan bo‘lib, ularga <br>kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.
-          <br>
-          <hr class="hero-line">
-          <a class="main-link" href="#">Buyurtma berish</a></p>
-        </div>
-        <img class="hero-img" src="img/python-book.svg" alt="book" width="510" height="510">
+      <div class="hero-container container">
+        <div class="hero-content">
+          <h2 class="hero-heading" >Pythonda dasturlash asoslari</h2>
+          <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br>mukammal qo‘llanma. Kitobning har bir bo‘limi <br>
+            uchun maxsus video darslar yozilgan bo‘lib, ularga <br>kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.
+            <hr class="hero-line">
+            <a class="main-link" href="#">Buyurtma berish</a></p>
+          </div>
+          <img class="hero-img" src="img/python-book.svg" alt="book" width="510" height="510">
+      </div>
       </section>
       <section class="features">
         <!-- FEATURES -->
-        <hr class="hero-line">
-        <h2 class="feature-heading1">Nega aynan Akademnashr?</h2>
-        <ul class="features-list">
-          <div class="feature">
-            <li>
-              <img class="features-icon" src="img/feature-icon.svg" alt="feature" width="100" height="100">
-              <h3 class="feature-heading">Eng sara kitoblar</h3>
-              <p class="feature-info">Trenddagi eng ommabop, turli <br> auditoriyalarga mo’ljallangan har xil <br>janrdagi kitoblarni topa olasiz.</p>
-            </li>
-          </div>
-          <div class="feature">
-            <li>
-              <img src="img/feature-icon-1.svg" alt="feature" width="100" height="100">
-              <h3 class="feature-heading">Oson buyurtma qilish</h3>
-              <p class="feature-info">Akademnashr.uz saytidan o’zingizga <br>yoqqan kitobni sodda usulda buyurtma <br>qila olasiz.</p>
-            </li>
-          </div>
-          <div class="feature">
-            <li>
-              <img src="img/feature-icon-2.svg" alt="feature" width="100" height="100">
-              <h3 class="feature-heading">Tez yetkazib berish</h3>
-              <p class="feature-info">O’zbekistonning ixtiyoriy hududiga 3 ish <br>kuni ichida, xalqaro buyurtmalarni 10 ish <br>kuni ichida yetkazib beriladi.</p>
-            </li>
-          </div>
-        </ul>
+        <div class="container">
+          <hr class="hero-line">
+          <h2 class="feature-heading1">Nega aynan Akademnashr?</h2>
+
+          <ul class="features-list">
+            <div class="feature">
+              <li>
+                <img class="features-icon" src="img/feature-icon.svg" alt="feature" width="100" height="100">
+                <h3 class="feature-heading">Eng sara kitoblar</h3>
+                <p class="feature-info">Trenddagi eng ommabop, turli <br> auditoriyalarga mo’ljallangan har xil <br>janrdagi kitoblarni topa olasiz.</p>
+              </li>
+            </div>
+            <div class="feature">
+              <li>
+                <img class="feature-icon" src="img/feature-icon-1.svg" alt="feature" width="100" height="100">
+                <h3 class="feature-heading">Oson buyurtma qilish</h3>
+                <p class="feature-info">Akademnashr.uz saytidan o’zingizga <br>yoqqan kitobni sodda usulda buyurtma <br>qila olasiz.</p>
+              </li>
+            </div>
+            <div class="feature">
+              <li>
+                <img class="feature-icon" src="img/feature-icon-2.svg" alt="feature" width="100" height="100">
+                <h3 class="feature-heading">Tez yetkazib berish</h3>
+                <p class="feature-info">O’zbekistonning ixtiyoriy hududiga 3 ish <br>kuni ichida, xalqaro buyurtmalarni 10 ish <br>kuni ichida yetkazib beriladi.</p>
+              </li>
+            </div>
+          </ul>
+        </div>
       </section>
 
 
 
       <!-- AKSIYA -->
       <section class="promo">
-        <div class="promo-content">
-
-          <h2 class="promo-heading">Bolalar kitoblari uchun
-            ajoyib aksiya!</h2>
-            <div class="promo-info-wrapper">
-              <div class="promo-info-wrapper"><p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-                <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta kitob</strong>ni <strong class="promo-highlight">350 ming so’m</strong>ga (aslida 383 ming so’m) sotib olishingiz mumkin.</p></div>
-            </div>
-            <a class="main-link" href="#">Buyurtma berish</a>
+        <div class="container">
+          <div class="promo-inner">
+            <div class="promo-content">
+              <h2 class="promo-heading">Bolalar kitoblari uchun
+                ajoyib aksiya!</h2>
+                <div class="promo-info-wrapper">
+                  <div class="promo-info-wrapper"><p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+                    <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta kitob</strong>ni <strong class="promo-highlight">350 ming so’m</strong>ga (aslida 383 ming so’m) sotib olishingiz mumkin.</p></div>
+                </div>
+                <a class="main-link" href="#">Buyurtma berish</a>
+              </div>
+              <img class="promo-img" src="img/sale-img.jpg" alt="kitob" width="440" height="440">
           </div>
-          <img class="promo-img" src="img/sale-img.jpg" alt="kitob" width="440" height="440">
+        </div>
         </section>
 
       </main>
       <!-- SITE FOOTER -->
-      <footer class="site-footer" >
-        <div class="site-footer-top">
-          <a class="logo-link" href="index.html"><img src="img/logo.svg" alt="logo" width="227.71" height="60"></a>
-          <!-- IJTIMOIY TARMOQLAR -->
-          <ul class="site-footer-socials">
-            <li><a href="https://t.me/Akademnashr" target="_blank"><img src="img/icon-telegram.svg" alt="telegram" width="24" height="24"></a></li>
-            <li><a href="https://www.facebook.com/Akademnashr" target="_blank"><img src="img/icon-facebook.svg" alt="facebook" width="24" height="24"></a></li>
-            <li><a href="https://instagram.com/akademnashr/?hl=en" target="_blank"><img src="img/icon-instagram.svg" alt="instagram" width="24" height="24"></a></li>
-          </ul>
-        </div>
-      </footer>
-      <hr class="site-footer-divider" >
-
-      <!-- LINKLAR -->
-      <footer class="site-footer" >
-        <div class="site-footer-bottom">
-          <ul class="site-footer-links" >
-            <li><a href="#">Bosh sahifa</a></li>
-            <li><a href="#">Kitoblar</a></li>
-            <li><a href="#">Aksiya</a></li>
-            <li><a href="#">Yangiliklar</a></li>
-            <li><a href="#">Kontaktlar</a></li>
-          </ul>
-          <ul class="site-footer-links" >
-            <li><a href="#">Ilmiy nashrlar</a></li>
-            <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
-            <li><a href="#">Ma’rifiy nashrlar</a></li>
-            <li><a href="#">Lug’atlar</a></li>
-            <li><a href="#">Adabiy-badiiy nashrlar</a></li>
-            <li><a href="#">Abituriyentlar uchun</a></li>
-            <li><a href="#">Bolalar uchun</a></li>
-          </ul>
-          <ul class="site-footer-links" >
-            <li><a href="#">Ko’p so’raladigan savollar</a></li>
-            <li><a href="#">Yetkazib berish haqida</a></li>
-            <li><a href="#">To’lov usullari haqida</a></li>
-          </ul>
-        </div>
+      <div class="container">
+        <footer class="site-footer" >
+          <div class="site-footer-top">
+            <a class="logo-link" href="index.html"><img src="img/logo.svg" alt="logo" width="227.71" height="60"></a>
+            <!-- IJTIMOIY TARMOQLAR -->
+            <ul class="site-footer-socials">
+              <li><a href="https://t.me/Akademnashr" target="_blank"><img src="img/icon-telegram.svg" alt="telegram" width="24" height="24"></a></li>
+              <li><a href="https://www.facebook.com/Akademnashr" target="_blank"><img src="img/icon-facebook.svg" alt="facebook" width="24" height="24"></a></li>
+              <li><a href="https://instagram.com/akademnashr/?hl=en" target="_blank"><img src="img/icon-instagram.svg" alt="instagram" width="24" height="24"></a></li>
+            </ul>
+          </div>
+        </footer>
+        <hr class="site-footer-divider" >
+        <!-- LINKLAR -->
+        <footer class="site-footer" >
+          <div class="site-footer-bottom">
+            <ul class="site-footer-links" >
+              <li><a href="#">Bosh sahifa</a></li>
+              <li><a href="#">Kitoblar</a></li>
+              <li><a href="#">Aksiya</a></li>
+              <li><a href="#">Yangiliklar</a></li>
+              <li><a href="#">Kontaktlar</a></li>
+            </ul>
+            <ul class="site-footer-links" >
+              <li><a href="#">Ilmiy nashrlar</a></li>
+              <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
+              <li><a href="#">Ma’rifiy nashrlar</a></li>
+              <li><a href="#">Lug’atlar</a></li>
+              <li><a href="#">Adabiy-badiiy nashrlar</a></li>
+              <li><a href="#">Abituriyentlar uchun</a></li>
+              <li><a href="#">Bolalar uchun</a></li>
+            </ul>
+            <ul class="site-footer-links" >
+              <li><a href="#">Ko’p so’raladigan savollar</a></li>
+              <li><a href="#">Yetkazib berish haqida</a></li>
+              <li><a href="#">To’lov usullari haqida</a></li>
+            </ul>
+          </div>
+      </div>
       </footer>
     </body>
     </html>
