--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
     <section class="hero">
       <div class="hero-container container">
         <div class="hero-content">
-          <h2 class="hero-heading" >Pythonda dasturlash asoslari</h2>
+          <h2 class="hero-heading" >Pythonda dasturlash <br>asoslari</h2>
           <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br>mukammal qo‘llanma. Kitobning har bir bo‘limi <br>
             uchun maxsus video darslar yozilgan bo‘lib, ularga <br>kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.
-            <hr class="hero-line">
             <a class="main-link" href="#">Buyurtma berish</a></p>
           </div>
           <img class="hero-img" src="img/python-book.svg" alt="book" width="510" height="510">
@@ -48,8 +47,7 @@
       <section class="features">
         <!-- FEATURES -->
         <div class="container">
-          <hr class="hero-line">
-          <h2 class="feature-heading1">Nega aynan Akademnashr?</h2>
+          <h2 class="feature-heading1">Nega aynan <br>Akademnashr?</h2>
 
           <ul class="features-list">
             <div class="feature">
