update hero-img promo-img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="site-header">
     <div class="site-header-container container">
       <a class="logo-link" href="index.html">
-        <img src="img/logo.svg" alt="python-book" width="227" height="59.18">
+        <img class="gdgd" src="img/logo.svg" alt="python-book" width="227" height="59.18">
       </a>
       <div class="site-header-action">
         <nav>
