--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a class="main-link" href="#">Buyurtma berish</a>
         </div>
 
-        <img class="hero-img" src="img/python-book.jpg" alt="Qo'lda ushlab turilgan Pythonda dasturlash asoslari kitobi" width="510" height="510" srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
+        <img class="hero-img" src="img/python-book.jpg" alt="Qo'lda ushlab turilgan Pythonda dasturlash asoslari kitobi" width="510" height="510">
       </div>
     </section>
 
