--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <a class="main-link" href="#">Buyurtma berish</a>
           </div>
 
-          <img class="promo-img" src="img/sale-img.jpg" alt="Kitoblar to'plami ustma-ust joylangan" width="440" height="440" srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
+          <img class="promo-img" src="img/sale-img.jpg" alt="Kitoblar to'plami ustma-ust joylangan" width="440" height="440">
         </div>
       </div>
     </section>
